# DIAlignR

./: .Rbuildignore  .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  TODO  index.html  intesityTbl.csv  rtTbl.csv
R/: DIAlignR.R  RcppExports.R  affine_aligned_obj.R  align_dia_runs.R  align_metabo_runs.R  align_mrm_runs.R  align_runs.R  chromatogram_manip.R  chromatogram_smooth.R  constrain_sim_matrix.R  data.R  fill_missing_intensity.R  get_analytes.R  get_filenames.R  get_gap_penalty.R  get_global_fit.R  get_osw_query.R  get_peaks_chromatograms.R  get_similarity_matrix.R  map_aligned_idx2time.R  mcp_paper.R  merge_chromatogram.R  merge_order.R  merge_osw_mzml.R  merge_runs.R  msplit_alignment.R  nature_paper.R  pairwise_pep_peak_corp.R  peak_area.R  post_alignment.R  progressive_alignment.R  pyopenms.R  read_mzml.R  read_osw.R  scripts.R  sqMass.R  trace_alignment_path.R  utils.R  visualise_chromatograms.R
data/: LATWYSEMK_2_run3.tsv  LATWYSEMK_2_run4.tsv  StrepAnnot.rda  XIC_QFNNTDIVLLEDFQK_3_DIAlignR.RData  XIC_QFNNTDIVLLEDFQK_3_DIAlignR.rda  alignObj_DIAlignR.rda  masterXICs_DIAlignR.rda  multipeptide_DIAlignR.rda  oswFiles_DIAlignR.RData  oswFiles_DIAlignR.rda  oswOutStrep.rda  peptides.rda  runnames.rda
data-raw/: test_GenerateChroms.txt  test_GenerateData.R
doc/: DIAlignR-vignette.html
inst/: buildDIAlignR.txt
man/: AffineAlignObj-class.Rd  AffineAlignObj1-class.Rd  AffineAlignObjLight-class.Rd  AffineAlignObjMedium-class.Rd  AlignObj-class.Rd  AlignedIndices-class.Rd  DIAlignR.Rd  NeedleObjAffine-class.Rd  Person-class.Rd  XIC_QFNNTDIVLLEDFQK_3_DIAlignR.Rd  addFlankToLeft.Rd  addFlankToRight.Rd  addXIC.Rd  alignChromatogramsCpp.Rd  alignChromatograms_cpp.Rd  alignDIAruns.Rd  alignIthAnalyte.Rd  alignMRMruns.Rd  alignMetaboruns.Rd  alignObj_DIAlignR.Rd  alignTargetedRuns.Rd  alignTargetedRuns2.Rd  alignTargetedruns.Rd  alignToMaster.Rd  alignToRef.Rd  alignToRef2.Rd  alignTragetedRuns.Rd  alignedXIC.Rd  alignmentStats.Rd  analytesFromFeatures.Rd  approxFill.Rd  areaIntegrator.Rd  as.list-AffineAlignObj-method.Rd  as.list-AffineAlignObjLight-method.Rd  as.list-AffineAlignObjMedium-method.Rd  as.list-AlignObj-method.Rd  blobXICs.Rd  calcNoBeefMaskGlobal.Rd  calcNoBeefMaskGlobalWSlope.Rd  calculateIntensity.Rd  (+159 more)
python/DIAlignPy/: README.md  setup.py
python/scripts/: DIAlignR4win.py
src/: CInterface.cpp  CInterface.h  CMakeLists.txt  CProgram.c  ChromatogramPeak.h  CppInterface.hpp  DIAlign.pxd  DPosition.h  Initialization.md  MSChromatogram.cpp  MSChromatogram.h  Matrices.md  PeakIntegrator.cpp  PeakIntegrator.h  PyDIAlign.pyx  RcppExports.cpp  Rmain.cpp  SavitzkyGolayFilter.cpp  SavitzkyGolayFilter.h  affinealignment.cpp  affinealignment.h  affinealignobj.cpp  affinealignobj.h  alignment.cpp  alignment.h  chromSimMatrix.cpp  chromSimMatrix.h  constrainMat.cpp  constrainMat.h  gapPenalty.cpp  gapPenalty.h  integrateArea.cpp  integrateArea.h  interface.cpp  interface.h  main.cpp  mainpage.md  miscell.cpp  miscell.h  run_alignment.cpp  (+20 more)
src/doc/: Doxyfile
src/doc/html/: CppInterface_8hpp.html  CppInterface_8hpp.js  CppInterface_8hpp__incl.map  CppInterface_8hpp__incl.md5  CppInterface_8hpp_source.html  Initialization.html  Matrices.html  affinealignment_8h_source.html  affinealignment_8h_source.html.orig  affinealignobj_8h_source.html  affinealignobj_8h_source.html.orig  alignment_8h_source.html  alignment_8h_source.html.orig  annotated.html  annotated.html.orig  annotated_dup.js  chromSimMatrix_8h_source.html  classes.html  constrainMat_8h_source.html  files.html  files.js  functions.html  functions_func.html  functions_vars.html  gapPenalty_8h_source.html  graph_legend.html  index.html  integrateArea_8h_source.html  md_Initialization.html  md_Matrices.html  md_doc_pages_Initialization.html  md_doc_pages_Matrices.html  md_doc_pages_mainpage.html  md_mainpage.html  namespaceConstrainMatrix.html  namespaceDIAlign.html  namespaceDIAlign.js  namespaceDIAlign_1_1AffineAlignment.html  namespaceDIAlign_1_1Alignment.html  namespaceDIAlign_1_1ConstrainMatrix.html  (+42 more)
src/doc/html/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+5 more)
src/doc_pages/: Initialization.md  Matrices.md  mainpage.md
src/peakIntegration/: ChromatogramPeak.cpp  ChromatogramPeak.h  DPosition.cpp  DPosition.h  MSChromatogram.h  PeakIntegrator.h  README.txt  test.cpp
src/python/: CppInterface.hpp  DIAlign.pxd  DIAlignR4win.py  PyDIAlign.cpp  PyDIAlign.pyx  setup.py  test_data.py  test_pydialign.py
src/python/PyDIAlign.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/test/: test_affinealignment.cpp  test_affinealignobj.cpp  test_alignment.cpp  test_chromSimMatrix.cpp  test_constrainMat.cpp  test_gapPenalty.cpp  test_integrateArea.cpp  test_large.tsv  test_miscell.cpp  test_simpleFcn.cpp  test_utils.cpp  test_xicIntersects.cpp
tests/: testthat.R
tests/testthat/: test.csv  test.tsv  test1.csv  test2.csv  test2.tsv  test3.csv  test3.tsv  test_GenerateData.R  test_Rmain.R  test_align_dia_runs.R  test_chromatogram_manip.R  test_chromatogram_smooth.R  test_fill_missing_intensity.R  test_get_analytes.R  test_get_filenames.R  test_get_global_fit.R  test_get_osw_query.R  (+16 more)
vignettes/: DIAlign-vignette.R  DIAlign-vignette.Rmd  DIAlign-vignette.html  DIAlignR-vignette.R  DIAlignR-vignette.Rmd  DIAlignR-vignette.html  DIAlignR.bib
(+11 files in other folders)
